// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ColumnList/ListFooter ListFooter renders fine when it's loading 1`] = `
<div
  className="an-columnlist__footer"
>
  <div>
    <div
      className="loading"
    >
      <i
        className="icon icon-spinner"
      />
      <span>
         loading...
      </span>
    </div>
  </div>
  <div>
    <span
      className="message"
    >
      
    </span>
  </div>
</div>
`;

exports[`components/ColumnList/ListFooter ListFooter renders fine when show clear and count 1`] = `
<div
  className="an-columnlist__footer"
>
  <div>
    <div
      className="clear"
      disabled={true}
      onClick={[Function]}
    >
      Clear
    </div>
  </div>
  <div>
    <span
      className="count"
      disabled={false}
    >
      5
    </span>
  </div>
</div>
`;

exports[`components/ColumnList/ListFooter ListFooter renders fine when show sorter 1`] = `
<div
  className="an-columnlist__footer"
>
  <div>
    <i
      className="icon sorter icon-sort"
      disabled={false}
      onClick={[Function]}
    />
  </div>
  <div />
</div>
`;
